--- a/exam-template.html
+++ b/exam-template.html
@@ -101,58 +101,58 @@
   </footer>
 
   <!-- Script to fetch from Google Sheet -->
-  <script>
-    const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRVh2Dak5NekD_LAZjqbR4QRqkBmqrY0Jxm3E8Svle-6yhjebjbSWJGVZ1AAKIKuJVKL09XnoZxUlFj/pub?output=csv";
-
-    function cleanAndLinkify(text) {
-      if (!text) return "";
-      let cleaned = text.replace(/"/g, "").replace(/\n/g, "<br>");
-      cleaned = cleaned.replace(/(https?:\/\/[^\s<]+)/g, '<a href="$1" target="_blank">$1</a>');
-      return cleaned;
-    }
-
-    fetch(sheetURL)
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vRVh2Dak5NekD_LAZjqbR4QRqkBmqrY0Jxm3E8Svle-6yhjebjbSWJGVZ1AAKIKuJVKL09XnoZxUlFj/pub?output=tsv")
       .then(res => res.text())
-      .then(csv => {
-        let rows = csv.split("\n").map(r => r.split(","));
-        let examNameFromURL = location.pathname.split("/").pop().replace(".html", "").replace(/-/g, " ").toLowerCase();
+      .then(text => {
+        let rows = text.split("\n").map(r => r.split("\t"));
+        let headers = rows[0];
+        let exams = rows.slice(1);
 
-        let headers = rows[0].map(h => h.trim().toLowerCase());
-        let examData = null;
+        let examId = window.location.pathname.split("/").pop().replace(".html", "");
+        let exam = exams.find(r => r[0] === examId);
 
-        for (let i = 1; i < rows.length; i++) {
-          let rowName = rows[i][0].trim().toLowerCase();
-          if (rowName === examNameFromURL) {
-            examData = {};
-            headers.forEach((h, idx) => {
-              examData[h] = rows[i][idx] || "";
-            });
-            break;
+        if (!exam) return;
+
+        let data = {};
+        headers.forEach((h, i) => data[h] = exam[i] || "");
+
+        // Utility to format | as <br>
+        const formatMulti = str => str.split("|").map(s => s.trim()).join("<br>");
+
+        document.querySelector("#exam-title").textContent = data.title;
+        document.querySelector("#exam-subtitle").textContent = data.subtitle;
+        document.querySelector("#exam-why").innerHTML = data.why;
+        document.querySelector("#exam-about").innerHTML = data.about;
+        document.querySelector("#exam-eligibility").innerHTML = formatMulti(data.eligibility);
+        document.querySelector("#exam-roles").innerHTML = formatMulti(data.roles);
+        document.querySelector("#exam-pattern").innerHTML = formatMulti(data.pattern);
+        document.querySelector("#exam-dates").innerHTML = formatMulti(data.dates);
+        document.querySelector("#exam-tips").innerHTML = formatMulti(data.tips);
+
+        // PDF, PYQ, YouTube links
+        document.querySelector("#pdf-link").href = data.pdf_link;
+        document.querySelector("#pyq-link").href = data.pyq_link;
+
+        // YouTube links (Category || URL)
+        let ytHTML = "";
+        if (data.youtube) {
+          let ytParts = data.youtube.split("|");
+          for (let i = 0; i < ytParts.length; i += 3) {
+            if (ytParts[i] && ytParts[i+2]) {
+              ytHTML += `<strong>${ytParts[i]}</strong>: <a href="${ytParts[i+2]}" target="_blank">${ytParts[i+2]}</a><br>`;
+            }
           }
         }
+        document.querySelector("#youtube-links").innerHTML = ytHTML;
 
-        if (!examData) {
-          document.getElementById("examName").innerText = "Exam not found.";
-          return;
-        }
-
-        document.getElementById("examTitle").innerText = examData["exam name"];
-        document.getElementById("examName").innerText = examData["exam name"];
-        document.getElementById("tagline").innerHTML = cleanAndLinkify(examData["tagline"]);
-        document.getElementById("about").innerHTML = cleanAndLinkify(examData["about"]);
-        document.getElementById("eligibility").innerHTML = cleanAndLinkify(examData["eligibility"]);
-        document.getElementById("jobRoles").innerHTML = cleanAndLinkify(examData["job roles"]);
-        document.getElementById("examPattern").innerHTML = cleanAndLinkify(examData["exam pattern"]);
-        document.getElementById("importantDates").innerHTML = cleanAndLinkify(examData["important dates"]);
-        document.getElementById("tips").innerHTML = cleanAndLinkify(examData["tips"]);
-        document.getElementById("resources").innerHTML = cleanAndLinkify(examData["resources"]);
-        document.getElementById("officialSite").innerHTML = cleanAndLinkify(examData["official site"]);
-        document.getElementById("howToApply").innerHTML = cleanAndLinkify(examData["how to apply"]);
-      })
-      .catch(err => {
-        console.error("Error loading data:", err);
+        document.querySelector("#official-site").href = data.website;
+        document.querySelector("#apply-link").href = data.apply_link;
       });
-  </script>
+  });
+</script>
+
 
   <!-- Google Translate -->
   <script type="text/javascript">
