--- a/exam-template.html
+++ b/exam-template.html
@@ -48,53 +48,56 @@
   <div id="google_translate_element" style="text-align: right; margin-bottom: 10px;"></div>
   <a href="class10.html" class="cta-button">← Back to Class 10 Jobs</a>
   
-  <h1 id="examName">Loading...</h1>
-  <p id="tagline"></p>
+ <h1 id="exam-title">Loading...</h1>
+<p id="exam-subtitle"></p>
 
-  <section>
-    <h2>🔍 About</h2>
-    <div id="about"></div>
-  </section>
+<section>
+  <h2>🔍 About</h2>
+  <div id="exam-about"></div>
+</section>
 
-  <section>
-    <h2>🎓 Who can apply?</h2>
-    <div id="eligibility"></div>
-  </section>
+<section>
+  <h2>🎓 Who can apply?</h2>
+  <div id="exam-eligibility"></div>
+</section>
 
-  <section>
-    <h2>💼 Job roles</h2>
-    <div id="jobRoles"></div>
-  </section>
+<section>
+  <h2>💼 Job roles</h2>
+  <div id="exam-roles"></div>
+</section>
 
-  <section>
-    <h2>📝 Exam pattern</h2>
-    <div id="examPattern"></div>
-  </section>
+<section>
+  <h2>📝 Exam pattern</h2>
+  <div id="exam-pattern"></div>
+</section>
 
-  <section>
-    <h2>📅 Important dates</h2>
-    <div id="importantDates"></div>
-  </section>
+<section>
+  <h2>📅 Important dates</h2>
+  <div id="exam-dates"></div>
+</section>
 
-  <section>
-    <h2>💡 Tips</h2>
-    <div id="tips"></div>
-  </section>
+<section>
+  <h2>💡 Tips</h2>
+  <div id="exam-tips"></div>
+</section>
 
-  <section>
-    <h2>🔗 Resources</h2>
-    <div id="resources"></div>
-  </section>
+<section>
+  <h2>🔗 Resources</h2>
+  <p>📄 <a id="pdf-link" href="#" target="_blank">Notification / Syllabus</a></p>
+  <p>📄 <a id="pyq-link" href="#" target="_blank">Previous Year Papers</a></p>
+  <div id="youtube-links"></div>
+</section>
 
-  <section>
-    <h2>🌐 Official site</h2>
-    <div id="officialSite"></div>
-  </section>
+<section>
+  <h2>🌐 Official site</h2>
+  <p><a id="official-site" href="#" target="_blank">Visit Official Website</a></p>
+</section>
 
-  <section>
-    <h2>📝 How to apply</h2>
-    <div id="howToApply"></div>
-  </section>
+<section>
+  <h2>📝 How to apply</h2>
+  <p><a id="apply-link" href="#" class="cta-button" target="_blank">Apply Online</a></p>
+</section>
+
 
   <footer>
     <p style="text-align:center; margin-top: 20px;">© 2025 Naukri Saathi | All resources are free & official</p>
