--- a/exam-template.html
+++ b/exam-template.html
@@ -48,126 +48,56 @@
   <div id="google_translate_element" style="text-align: right; margin-bottom: 10px;"></div>
   <a href="class10.html" class="cta-button">← Back to Class 10 Jobs</a>
   
- <h1 id="exam-title">Loading...</h1>
-<p id="exam-subtitle"></p>
+  <h1 id="exam-title">Loading...</h1>
+  <p id="exam-subtitle"></p>
 
-<section>
-  <h2>🔍 About</h2>
-  <div id="exam-about"></div>
-</section>
+  <section>
+    <h2>🔍 About</h2>
+    <div id="exam-about"></div>
+  </section>
 
-<section>
-  <h2>🎓 Who can apply?</h2>
-  <div id="exam-eligibility"></div>
-</section>
+  <section>
+    <h2>❓ Why this exam?</h2>
+    <div id="exam-why"></div>
+  </section>
 
-<section>
-  <h2>💼 Job roles</h2>
-  <div id="exam-roles"></div>
-</section>
+  <section>
+    <h2>🎓 Who can apply?</h2>
+    <div id="exam-eligibility"></div>
+  </section>
 
-<section>
-  <h2>📝 Exam pattern</h2>
-  <div id="exam-pattern"></div>
-</section>
+  <section>
+    <h2>💼 Job roles</h2>
+    <div id="exam-roles"></div>
+  </section>
 
-<section>
-  <h2>📅 Important dates</h2>
-  <div id="exam-dates"></div>
-</section>
+  <section>
+    <h2>📝 Exam pattern</h2>
+    <div id="exam-pattern"></div>
+  </section>
 
-<section>
-  <h2>💡 Tips</h2>
-  <div id="exam-tips"></div>
-</section>
+  <section>
+    <h2>📅 Important dates</h2>
+    <div id="exam-dates"></div>
+  </section>
 
-<section>
-  <h2>🔗 Resources</h2>
-  <p>📄 <a id="pdf-link" href="#" target="_blank">Notification / Syllabus</a></p>
-  <p>📄 <a id="pyq-link" href="#" target="_blank">Previous Year Papers</a></p>
-  <div id="youtube-links"></div>
-</section>
+  <section>
+    <h2>💡 Tips</h2>
+    <div id="exam-tips"></div>
+  </section>
 
-<section>
-  <h2>🌐 Official site</h2>
-  <p><a id="official-site" href="#" target="_blank">Visit Official Website</a></p>
-</section>
+  <section>
+    <h2>🔗 Resources</h2>
+    <p>📄 <a id="pdf-link" href="#" target="_blank" rel="noopener noreferrer">Notification / Syllabus</a></p>
+    <p>📄 <a id="pyq-link" href="#" target="_blank" rel="noopener noreferrer">Previous Year Papers</a></p>
+    <div id="youtube-links"></div>
+  </section>
 
-<section>
-  <h2>📝 How to apply</h2>
-  <p><a id="apply-link" href="#" class="cta-button" target="_blank">Apply Online</a></p>
-</section>
+  <section>
+    <h2>🌐 Official site</h2>
+    <p><a id="official-site" href="#" target="_blank" rel="noopener noreferrer">Visit Official Website</a></p>
+  </section>
 
-
-  <footer>
-    <p style="text-align:center; margin-top: 20px;">© 2025 Naukri Saathi | All resources are free & official</p>
-  </footer>
-
-  <!-- Script to fetch from Google Sheet -->
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vRVh2Dak5NekD_LAZjqbR4QRqkBmqrY0Jxm3E8Svle-6yhjebjbSWJGVZ1AAKIKuJVKL09XnoZxUlFj/pub?output=tsv")
-      .then(res => res.text())
-      .then(text => {
-        let rows = text.split("\n").map(r => r.split("\t"));
-        let headers = rows[0];
-        let exams = rows.slice(1);
-
-        let examId = window.location.pathname.split("/").pop().replace(".html", "");
-        let exam = exams.find(r => r[0] === examId);
-
-        if (!exam) return;
-
-        let data = {};
-        headers.forEach((h, i) => data[h] = exam[i] || "");
-
-        // Utility to format | as <br>
-        const formatMulti = str => str.split("|").map(s => s.trim()).join("<br>");
-
-        document.querySelector("#exam-title").textContent = data.title;
-        document.querySelector("#exam-subtitle").textContent = data.subtitle;
-        document.querySelector("#exam-why").innerHTML = data.why;
-        document.querySelector("#exam-about").innerHTML = data.about;
-        document.querySelector("#exam-eligibility").innerHTML = formatMulti(data.eligibility);
-        document.querySelector("#exam-roles").innerHTML = formatMulti(data.roles);
-        document.querySelector("#exam-pattern").innerHTML = formatMulti(data.pattern);
-        document.querySelector("#exam-dates").innerHTML = formatMulti(data.dates);
-        document.querySelector("#exam-tips").innerHTML = formatMulti(data.tips);
-
-        // PDF, PYQ, YouTube links
-        document.querySelector("#pdf-link").href = data.pdf_link;
-        document.querySelector("#pyq-link").href = data.pyq_link;
-
-        // YouTube links (Category || URL)
-        let ytHTML = "";
-        if (data.youtube) {
-          let ytParts = data.youtube.split("|");
-          for (let i = 0; i < ytParts.length; i += 3) {
-            if (ytParts[i] && ytParts[i+2]) {
-              ytHTML += `<strong>${ytParts[i]}</strong>: <a href="${ytParts[i+2]}" target="_blank">${ytParts[i+2]}</a><br>`;
-            }
-          }
-        }
-        document.querySelector("#youtube-links").innerHTML = ytHTML;
-
-        document.querySelector("#official-site").href = data.website;
-        document.querySelector("#apply-link").href = data.apply_link;
-      });
-  });
-</script>
-
-
-  <!-- Google Translate -->
-  <script type="text/javascript">
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement({
-        pageLanguage: 'en',
-        includedLanguages: 'as,hi',
-        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-      }, 'google_translate_element');
-    }
-  </script>
-  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-
-</body>
-</html>
+  <section>
+    <h2>📝 How to apply</h2>
+    <p>
