--- a/exam-template.html
+++ b/exam-template.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title id="examTitle">Exam Details - Naukri Saathi</title>
   <link rel="stylesheet" href="style.css" />
   <style>
@@ -11,6 +11,7 @@
       background-color: #faf7f0;
       line-height: 1.6;
       padding: 10px;
+      color: #2a4d69;
     }
     h1, h2 {
       color: #2a4d69;
@@ -41,13 +42,46 @@
     .cta-button:hover {
       background: #45a049;
     }
+    ul {
+      padding-left: 1.2rem;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      max-width: 500px;
+      margin: 10px 0;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
+    }
+    th {
+      background-color: #f0f0f0;
+      text-align: left;
+    }
+    /* Responsive iframe container */
+    .video-container {
+      position: relative;
+      padding-bottom: 56.25%; /* 16:9 */
+      padding-top: 25px;
+      height: 0;
+      margin-bottom: 20px;
+    }
+    .video-container iframe {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
+    }
   </style>
 </head>
 <body>
 
   <div id="google_translate_element" style="text-align: right; margin-bottom: 10px;"></div>
+
   <a href="class10.html" class="cta-button">← Back to Class 10 Jobs</a>
-  
+
   <h1 id="exam-title">Loading...</h1>
   <p id="exam-subtitle"></p>
 
@@ -116,6 +150,56 @@
       return params.get("id") || "";
     }
 
+    function formatList(str) {
+      if (!str) return "";
+      const items = str.split("|").map(s => s.trim()).filter(Boolean);
+      if (items.length === 0) return "";
+      return "<ul>" + items.map(i => `<li>${i}</li>`).join("") + "</ul>";
+    }
+
+    function formatDates(str) {
+      if (!str) return "";
+      const parts = str.split("|").map(s => s.trim());
+      if (parts.length % 2 !== 0) return str.replace(/\|/g, "<br>"); // fallback
+
+      let rows = "";
+      for (let i = 0; i < parts.length; i += 2) {
+        rows += `<tr><td>${parts[i]}</td><td>${parts[i+1]}</td></tr>`;
+      }
+      return `<table>
+                <thead><tr><th>Event</th><th>Date</th></tr></thead>
+                <tbody>${rows}</tbody>
+              </table>`;
+    }
+
+    function generateYouTubeEmbedHTML(youtubeData) {
+      if (!youtubeData) return "";
+      let parts = youtubeData.split("|").map(s => s.trim());
+      let html = "";
+
+      for (let i = 0; i < parts.length; i += 3) {
+        let title = parts[i];
+        let url = parts[i+2];
+        if (title && url) {
+          if (url.includes("youtube.com/watch?v=")) {
+            const videoId = url.split("v=")[1].split("&")[0];
+            const embedUrl = `https://www.youtube.com/embed/${videoId}`;
+            html += `<div>
+                      <h4>${title}</h4>
+                      <div class="video-container">
+                        <iframe src="${embedUrl}" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+                      </div>
+                    </div>`;
+          } else if (url.includes("youtube.com/playlist?list=")) {
+            html += `<p><strong>${title}</strong>: <a href="${url}" target="_blank" rel="noopener noreferrer">${url}</a></p>`;
+          } else {
+            html += `<p><strong>${title}</strong>: <a href="${url}" target="_blank" rel="noopener noreferrer">${url}</a></p>`;
+          }
+        }
+      }
+      return html;
+    }
+
     fetch(sheetUrl)
       .then(res => {
         if (!res.ok) throw new Error("Network response was not ok");
@@ -126,11 +210,7 @@
         let headers = rows[0];
         let exams = rows.slice(1);
 
-        console.log("Loaded exams:", exams.length);
-
         let examId = getExamIdFromUrl();
-        console.log("Exam ID from URL param:", examId);
-
         let exam = exams.find(r => r[0] === examId);
 
         if (!exam) {
@@ -141,31 +221,20 @@
         let data = {};
         headers.forEach((h, i) => data[h] = exam[i] || "");
 
-        const formatMulti = str => str ? str.split("|").map(s => s.trim()).join("<br>") : "";
-
-        document.querySelector("#exam-title").textContent = data.title;
-        document.querySelector("#exam-subtitle").textContent = data.subtitle;
+        document.querySelector("#exam-title").textContent = data.title || "";
+        document.querySelector("#exam-subtitle").textContent = data.subtitle || "";
         document.querySelector("#exam-why").innerHTML = data.why || "";
         document.querySelector("#exam-about").innerHTML = data.about || "";
-        document.querySelector("#exam-eligibility").innerHTML = formatMulti(data.eligibility);
-        document.querySelector("#exam-roles").innerHTML = formatMulti(data.roles);
-        document.querySelector("#exam-pattern").innerHTML = formatMulti(data.pattern);
-        document.querySelector("#exam-dates").innerHTML = formatMulti(data.dates);
-        document.querySelector("#exam-tips").innerHTML = formatMulti(data.tips);
+        document.querySelector("#exam-eligibility").innerHTML = formatList(data.eligibility);
+        document.querySelector("#exam-roles").innerHTML = formatList(data.roles);
+        document.querySelector("#exam-pattern").innerHTML = formatList(data.pattern);
+        document.querySelector("#exam-dates").innerHTML = formatDates(data.dates);
+        document.querySelector("#exam-tips").innerHTML = formatList(data.tips);
 
         document.querySelector("#pdf-link").href = data.pdf_link || "#";
         document.querySelector("#pyq-link").href = data.pyq_link || "#";
 
-        let ytHTML = "";
-        if (data.youtube) {
-          let ytParts = data.youtube.split("|").map(s => s.trim());
-          for (let i = 0; i < ytParts.length; i += 3) {
-            if (ytParts[i] && ytParts[i+2]) {
-              ytHTML += `<strong>${ytParts[i]}</strong>: <a href="${ytParts[i+2]}" target="_blank" rel="noopener noreferrer">${ytParts[i+2]}</a><br>`;
-            }
-          }
-        }
-        document.querySelector("#youtube-links").innerHTML = ytHTML;
+        document.querySelector("#youtube-links").innerHTML = generateYouTubeEmbedHTML(data.youtube);
 
         document.querySelector("#official-site").href = data.website || "#";
         document.querySelector("#apply-link").href = data.apply_link || "#";
@@ -177,18 +246,17 @@
   });
 </script>
 
-
-  <!-- Google Translate -->
-  <script type="text/javascript">
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement({
-        pageLanguage: 'en',
-        includedLanguages: 'as,hi',
-        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-      }, 'google_translate_element');
-    }
-  </script>
-  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<!-- Google Translate -->
+<script type="text/javascript">
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement({
+      pageLanguage: 'en',
+      includedLanguages: 'as,hi',
+      layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+    }, 'google_translate_element');
+  }
+</script>
+<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </body>
 </html>
