--- a/exam-template.html
+++ b/exam-template.html
@@ -148,7 +148,7 @@
 
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-      const sheetUrl = "YOUR_PUBLISHED_SHEET_TSV_URL_HERE";
+      const sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRVh2Dak5NekD_LAZjqbR4QRqkBmqrY0Jxm3E8Svle-6yhjebjbSWJGVZ1AAKIKuJVKL09XnoZxUlFj/pub?output=tsv";
 
       function getExamIdFromUrl() {
         const params = new URLSearchParams(window.location.search);
